fix: image too wide

--- a/src/celemod-ui/src/components/ModList.scss
+++ b/src/celemod-ui/src/components/ModList.scss
@@ -212,6 +212,8 @@
             border-radius: 10px;
             cursor: pointer;
             min-width: 300px;
+            width: 300px;
+            object-fit: cover;
             margin-right: 10px;
             max-height: 160px;
             border: 1px solid theme.$bg3;
